# DataWarehouses

./: .gitignore  README.md  docker-compose.yaml  dummy_populate.py  logging_config.py  main.py  pyproject.toml
sources/: asset.csv  data.csv  source.csv
src/: connection.py  models.py  queries.py
